@@ -1,7 +1,7 @@
 package br.com.chadschoperia.service;
 
 import br.com.chadschoperia.domain.entities.Beer;
-import br.com.chadschoperia.domain.enums.HistoricBeerActionEnum;
+import br.com.chadschoperia.domain.enums.HistoricProductActionEnum;
 import br.com.chadschoperia.exceptions.BusinessException;
 import br.com.chadschoperia.exceptions.EntityNotFoundException;
 import br.com.chadschoperia.repository.BeerRepository;
@@ -10,9 +10,12 @@ import br.com.chadschoperia.service.dto.ClientCardDto;
 import br.com.chadschoperia.service.dto.PourBeerDTO;
 import br.com.chadschoperia.service.dto.ProductStockDto;
 import br.com.chadschoperia.service.dto.ViewBeerDto;
+import br.com.chadschoperia.service.dto.filters.ViewBeerFilterDto;
 import br.com.chadschoperia.service.events.AddClientCardExpenseEvent;
 import br.com.chadschoperia.service.events.AddHistoricBeerEvent;
 import br.com.chadschoperia.service.events.AddListHistoricBeerEvent;
+import br.com.chadschoperia.service.events.AddListRevenueExpenseEvent;
+import br.com.chadschoperia.service.events.AddRevenueExpenseEvent;
 import br.com.chadschoperia.service.mapper.BeerMapper;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -25,7 +28,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -41,14 +43,15 @@ public class BeerService {
 	private final ClientCardService clientCardService;
 
 	private final MessageSource messageSource;
+	private final MessageSource historicMessageSource;
 	private final ApplicationEventPublisher applicationEventPublisher;
 
 	public List<ViewBeerDto> findAllView() {
 		return beerRepository.findAllView();
 	}
 
-	public List<BeerDto> findAllDto() {
-		return beerRepository.findAllDto();
+	public List<BeerDto> findAllDto(ViewBeerFilterDto filter) {
+		return beerRepository.findAllDto(filter);
 	}
 
 	public BeerDto findDtoById(Long idBeer) {
@@ -74,7 +77,7 @@ public class BeerService {
 		beerDto.setStock(0D);
 		beerDto = saveDto(beerDto);
 
-		publishHistoric(beerDto, HistoricBeerActionEnum.CREATE);
+		publishHistoric(beerDto, HistoricProductActionEnum.CREATE);
 
 		return beerDto;
 	}
@@ -86,39 +89,49 @@ public class BeerService {
 		beerDto.setStock(originalDto.getStock());
 		beerDto = saveDto(beerDto);
 
-		publishHistoric(beerDto, HistoricBeerActionEnum.UPDATE);
+		publishHistoric(beerDto, HistoricProductActionEnum.UPDATE);
 
 		return beerDto;
 	}
 
 	public List<BeerDto> restock(List<ProductStockDto> dtos) {
-		List<Long> productIds = dtos.stream().map(ProductStockDto::getProductId).collect(Collectors.toList());
+		List<Long> productIds = dtos.stream().map(ProductStockDto::getProductId).toList();
 		List<Beer> beers = beerRepository.findAllById(productIds);
+		List<Double> expensesValues = new ArrayList<>();
+		List<String> expensesDescs = new ArrayList<>();
 		List<Double> addedAmounts = new ArrayList<>();
 		List<Double> totalAmounts = new ArrayList<>();
 
-		beers.forEach(product -> {
-			double added = addStockFromSource(product, dtos);
+		beers.forEach(beer -> {
+			double added = addStockFromSource(beer, dtos);
 			addedAmounts.add(added);
-			totalAmounts.add(product.getStock());
+			totalAmounts.add(beer.getStock());
+			expensesValues.add(-beer.getTotalPurchasePrice(added));
+			expensesDescs.add(historicMessageSource.getMessage("revenue.beer.restock", new String[]{String.format("%01.1f", added), beer.getName()}, Locale.getDefault()));
 		});
-		publishListHistoric(HistoricBeerActionEnum.RESTOCK, productIds, addedAmounts, totalAmounts);
+		publishListHistoric(HistoricProductActionEnum.RESTOCK, productIds, addedAmounts, totalAmounts);
+		publishRevenueExpense(expensesValues, expensesDescs);
 
-		return saveDto(beers);
+		return beerMapper.toDto(saveEntity(beers));
 	}
 
 	public void pour(PourBeerDTO dto) {
 		BeerDto beer = findDtoById(dto.getBeer());
-		publishPourExpense(dto, beer);
+		ClientCardDto card = clientCardService.findOpenByRfid(dto.getCard());
+		String historicDesc = historicMessageSource.getMessage(HistoricProductActionEnum.POUR.getMessage(), new String[]{card.getClient().getName(), card.getRfid()}, Locale.getDefault());
+		String revenueDesc = historicMessageSource.getMessage("revenue.beer.pour", new String[]{beer.getName(), card.getClient().getName(), card.getRfid()}, Locale.getDefault());
+
+		publishPourExpense(card, beer);
 		beer.subtractStock(POUR_QUANTITY);
-		publishHistoric(beer, HistoricBeerActionEnum.POUR, -POUR_QUANTITY);
+		publishRevenueExpense(beer.getValuePerMug(), revenueDesc);
+		publishHistoric(beer, HistoricProductActionEnum.POUR, -POUR_QUANTITY, historicDesc);
 		saveDto(beer);
 	}
 
 	public void deleteById(Long idBeer) {
 		Beer entity = findEntityById(idBeer);
 		entity.setDeleted(Boolean.TRUE);
-		publishHistoric(entity, HistoricBeerActionEnum.DELETE);
+		publishHistoric(entity, HistoricProductActionEnum.DELETE);
 		saveEntity(entity);
 	}
 
@@ -138,10 +151,6 @@ public class BeerService {
 		return beerMapper.toDto(saveEntity(beerMapper.toEntity(beer)));
 	}
 
-	private List<BeerDto> saveDto(List<Beer> beers) {
-		return beerMapper.toDto(saveEntity(beers));
-	}
-
 	private Beer saveEntity(Beer entity) {
 		return beerRepository.save(entity);
 	}
@@ -152,9 +161,8 @@ public class BeerService {
 	// </editor-fold>
 
 	// <editor-fold defaultstate="collapsed" desc="Private Methods: Publish events">
-	private void publishPourExpense(PourBeerDTO dto, BeerDto beer) {
+	private void publishPourExpense(ClientCardDto card, BeerDto beer) {
 		try {
-			ClientCardDto card = clientCardService.findOpenByRfid(dto.getCard());
 			String description = messageSource.getMessage("client_card_expense.beer.pour", new String[]{beer.getName()}, Locale.getDefault());
 			applicationEventPublisher.publishEvent(new AddClientCardExpenseEvent(card.getId(), beer.getValuePerMug(), description));
 		} catch (EntityNotFoundException ex) {
@@ -162,23 +170,35 @@ public class BeerService {
 		}
 	}
 
-	private void publishHistoric(BeerDto beerDto, HistoricBeerActionEnum action) {
+	private void publishRevenueExpense(Double value, String description) {
+		applicationEventPublisher.publishEvent(new AddRevenueExpenseEvent(value, description));
+	}
+
+	private void publishRevenueExpense(List<Double> values, List<String> descriptions) {
+		applicationEventPublisher.publishEvent(new AddListRevenueExpenseEvent(values, descriptions));
+	}
+
+	private void publishHistoric(BeerDto beerDto, HistoricProductActionEnum action) {
 		this.publishHistoric(beerDto, action, null);
 	}
 
-	private void publishHistoric(Beer beer, HistoricBeerActionEnum action) {
+	private void publishHistoric(Beer beer, HistoricProductActionEnum action) {
 		this.publishHistoric(beer, action, null);
 	}
 
-	private void publishHistoric(BeerDto beerDto, HistoricBeerActionEnum action, Double stock) {
+	private void publishHistoric(BeerDto beerDto, HistoricProductActionEnum action, Double stock) {
 		applicationEventPublisher.publishEvent(new AddHistoricBeerEvent(beerDto.getId(), action, stock, beerDto.getStock(), null));
 	}
 
-	private void publishHistoric(Beer beer, HistoricBeerActionEnum action, Double stock) {
+	private void publishHistoric(BeerDto beerDto, HistoricProductActionEnum action, Double stock, String description) {
+		applicationEventPublisher.publishEvent(new AddHistoricBeerEvent(beerDto.getId(), action, stock, beerDto.getStock(), description));
+	}
+
+	private void publishHistoric(Beer beer, HistoricProductActionEnum action, Double stock) {
 		applicationEventPublisher.publishEvent(new AddHistoricBeerEvent(beer.getId(), action, stock, beer.getStock(), null));
 	}
 
-	private void publishListHistoric(HistoricBeerActionEnum action, List<Long> beerIds, List<Double> stocks, List<Double> totalStocks) {
+	private void publishListHistoric(HistoricProductActionEnum action, List<Long> beerIds, List<Double> stocks, List<Double> totalStocks) {
 		List<String> descriptions = new ArrayList<>();
 
 		for (int i = 0; i < beerIds.size(); i++) {
